--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -3,16 +3,16 @@ name: Deploy NetLogo Documentation
 on:
   push:
     branches:
-      - prebuild
+      - main
   workflow_dispatch:
     inputs:
       deploy_target:
         description: 'Deployment target'
         required: false
-        default: 'staging'
+        default: 'prebuild'
         type: choice
         options:
-          - main
+          - prebuild
           - staging
 
 jobs:
